Refactor `scss.format.*` settings for VSCode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
 	"scss.format.enable": true,
-	"scss.format.newlineBetweenRules": true,
-	"scss.format.newlineBetweenSelectors": true,
+	"scss.format.newlineBetweenSelectors": false,
 	"scss.format.preserveNewLines": false,
 	"scss.format.spaceAroundSelectorSeparator": true,
 	"[scss]": {
